--- a/autom4te.cache/traces.2
+++ b/autom4te.cache/traces.2
@@ -671,12 +671,27 @@ m4trace:configure.in:23: -1- m4_pattern_allow([^const$])
 m4trace:configure.in:25: -1- m4_pattern_allow([^size_t$])
 m4trace:configure.in:26: -1- m4_pattern_allow([^TIME_WITH_SYS_TIME$])
 m4trace:configure.in:27: -1- m4_pattern_allow([^HAVE_PTRDIFF_T$])
-m4trace:configure.in:30: -1- m4_pattern_allow([^SELECT_TYPE_ARG1$])
-m4trace:configure.in:30: -1- m4_pattern_allow([^SELECT_TYPE_ARG234$])
-m4trace:configure.in:30: -1- m4_pattern_allow([^SELECT_TYPE_ARG5$])
-m4trace:configure.in:31: -1- m4_pattern_allow([^RETSIGTYPE$])
-m4trace:configure.in:35: -1- _m4_warn([obsolete], [AC_OUTPUT should be used without arguments.
+m4trace:configure.in:37: -1- AM_CONDITIONAL([DEBUG_MAIN], [test "$debug" = "true"])
+m4trace:configure.in:37: -1- m4_pattern_allow([^DEBUG_MAIN_TRUE$])
+m4trace:configure.in:37: -1- m4_pattern_allow([^DEBUG_MAIN_FALSE$])
+m4trace:configure.in:37: -1- _AM_SUBST_NOTMAKE([DEBUG_MAIN_TRUE])
+m4trace:configure.in:37: -1- _AM_SUBST_NOTMAKE([DEBUG_MAIN_FALSE])
+m4trace:configure.in:47: -1- AM_CONDITIONAL([DEBUG_THREAD], [test "$debugthread" = "true"])
+m4trace:configure.in:47: -1- m4_pattern_allow([^DEBUG_THREAD_TRUE$])
+m4trace:configure.in:47: -1- m4_pattern_allow([^DEBUG_THREAD_FALSE$])
+m4trace:configure.in:47: -1- _AM_SUBST_NOTMAKE([DEBUG_THREAD_TRUE])
+m4trace:configure.in:47: -1- _AM_SUBST_NOTMAKE([DEBUG_THREAD_FALSE])
+m4trace:configure.in:57: -1- AM_CONDITIONAL([DEBUG_XML], [test "$debugxml" = "true"])
+m4trace:configure.in:57: -1- m4_pattern_allow([^DEBUG_XML_TRUE$])
+m4trace:configure.in:57: -1- m4_pattern_allow([^DEBUG_XML_FALSE$])
+m4trace:configure.in:57: -1- _AM_SUBST_NOTMAKE([DEBUG_XML_TRUE])
+m4trace:configure.in:57: -1- _AM_SUBST_NOTMAKE([DEBUG_XML_FALSE])
+m4trace:configure.in:60: -1- m4_pattern_allow([^SELECT_TYPE_ARG1$])
+m4trace:configure.in:60: -1- m4_pattern_allow([^SELECT_TYPE_ARG234$])
+m4trace:configure.in:60: -1- m4_pattern_allow([^SELECT_TYPE_ARG5$])
+m4trace:configure.in:61: -1- m4_pattern_allow([^RETSIGTYPE$])
+m4trace:configure.in:65: -1- _m4_warn([obsolete], [AC_OUTPUT should be used without arguments.
 You should run autoupdate.], [])
-m4trace:configure.in:35: -1- m4_pattern_allow([^LIB@&t@OBJS$])
-m4trace:configure.in:35: -1- m4_pattern_allow([^LTLIBOBJS$])
-m4trace:configure.in:35: -1- _AM_OUTPUT_DEPENDENCY_COMMANDS
+m4trace:configure.in:65: -1- m4_pattern_allow([^LIB@&t@OBJS$])
+m4trace:configure.in:65: -1- m4_pattern_allow([^LTLIBOBJS$])
+m4trace:configure.in:65: -1- _AM_OUTPUT_DEPENDENCY_COMMANDS
