--- a/autom4te.cache/output.1
+++ b/autom4te.cache/output.1
@@ -5273,9 +5273,9 @@ else
 fi
 
 
-# Check whether --enable-debugthread was given.
-if test "${enable_debugthread+set}" = set; then
-  enableval=$enable_debugthread;  if test "${enableval}" = "yes"; then
+# Check whether --enable-debugxml was given.
+if test "${enable_debugxml+set}" = set; then
+  enableval=$enable_debugxml;  if test "${enableval}" = "yes"; then
 		debugxml=true
 	  else
 		debugxml=false
