--- a/wiki/vimrc.wiki
+++ b/wiki/vimrc.wiki
@@ -29,19 +29,19 @@ set showcmd
 let Tlist_Use_Right_Window=1
 let Tlist_File_Fold_Auto_Close=1
 " 打开当前目录文件列表
-map <F5> :Explore<CR>
+"map <F5> :Explore<CR>
 " 函数和变量列表
-map <F6> :TlistToggle<CR>
+"map <F6> :TlistToggle<CR>
 
 " 搜索当前词，并打开quickfix窗口
-map <F7> :call Search_Word()<CR>
+"map <F7> :call Search_Word()<CR>
 " " 全能补全
-inoremap <F8> <C-x><C-o>
+"inoremap <F8> <C-x><C-o>
 
 " step into
-map <F2> <C-]>
+"map <F2> <C-]>
 " step out
-map <F3> <C-t>
+"map <F3> <C-t>
 "map <F4> <\-m>
 
 " auto full the command under command pattern
